--- a/StudentSupport/templates/todo.html
+++ b/StudentSupport/templates/todo.html
@@ -85,12 +85,9 @@ Replace this navbar with below
     //TODO : News in all department.
     //TODO : News section in faculty, hod and principal department.
     //TODO : Give principal right to delete and change news floating around.
-    //TODO : Committee section chairperson as well as members dashboard.
     //TODO : change email templates.
-    //TODO : complaint section for student as well as faculty.
     //TODO : Contact us page and issue page. (Kinjal And jasmin)
     //TODO : Courtesy page. (Kinjal)
-    //TODO : Report PDF Generation (Jinesh)
     //TODO : Change ccommittee widgets in every dashboard.
     //TODO : Base templates extending.
     //TODO : Change button and make consistent in every dashboard and in every page.
@@ -100,5 +97,8 @@ Replace this navbar with below
     //TODO : Subject wise average ratings.
     //TODO : all select should be changed to custom-select
     //TODO : reload every page after sweet alert as in chrome previous action gets repeated.
+    //TODO : Error handling in download reports
     //TODO :
 </script>
+
+print(request.META['HTTP_REFERER'])
