--- a/StudentSupport/templates/students/student_complaint_section.html
+++ b/StudentSupport/templates/students/student_complaint_section.html
@@ -113,7 +113,7 @@
                 <div class="navbar-wrapper">
                     <div class="navbar-logo">
                         <a href="{% url 'student_dashboard' %}">
-                            <img class="img-fluid" src="{% static 'assets/images/logo_sss.png' %}" alt="Theme-Logo">
+                            <img class="img-fluid" src="{% static 'assets/images/logo_sss3.png' %}" alt="Theme-Logo">
                         </a>
                     </div>
 
